--- a/index.html
+++ b/index.html
@@ -67,12 +67,40 @@
         </div>
         <div class="menu__item">
             <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
+                <img src="images/amatriciana.jpg" alt="">
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
+                    <h3>Amatriciana</h3>
+                    <p>(Pancetta, tomato sauce, garlic, onions)</p>
+                </div>
+                <div class="menu__item-right">
+                    <h3>20$</h3>
+                </div>
+            </div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-image">
+                <img src="images/napoletana.jpg" alt="">
+            </div>
+            <div class="menu__item-text">
+                <div class="menu__item-left">
+                    <h3>Pasta Al Pomodoro</h3>
+                    <p>(Tomato sauce, garlic, basil)</p>
+                </div>
+                <div class="menu__item-right">
+                    <h3>10$</h3>
+                </div>
+            </div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-image">
+                <img src="images/arabiata.jpg" alt="">
+            </div>
+            <div class="menu__item-text">
+                <div class="menu__item-left">
+                    <h3>Arrabbiata</h3>
+                    <p>(Tomato sauce, garlic, chili, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
                     <h3>15$</h3>
@@ -81,12 +109,54 @@
         </div>
         <div class="menu__item">
             <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
+                <img src="images/fruti-di-mare.jpg" alt="">
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
+                    <h3>Frutti di mare</h3>
+                    <p>(Tomato sauce, seafood mix, garlic, onions)</p>
+                </div>
+                <div class="menu__item-right">
+                    <h3>35$</h3>
+                </div>
+            </div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-image">
+                <img src="images/pesto.jpg" alt="">
+            </div>
+            <div class="menu__item-text">
+                <div class="menu__item-left">
+                    <h3>Pesto</h3>
+                    <p>(Basil, pine nuts, parmesan, garlic, lemon)</p>
+                </div>
+                <div class="menu__item-right">
+                    <h3>30$</h3>
+                </div>
+            </div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-image">
+                <img src="images/carbonara.jpg" alt="">
+            </div>
+            <div class="menu__item-text">
+                <div class="menu__item-left">
+                    <h3>Carbonara</h3>
+                    <p>(Pancetta, eggs, Pecorino, Black pepper)</p>
+                </div>
+                <div class="menu__item-right">
+                    <h3>20$</h3>
+                </div>
+            </div>
+        </div>
+        <div class="menu__item">
+            <div class="menu__item-image">
+                <img src="images/al-tonno.jpg" alt="">
+            </div>
+            <div class="menu__item-text">
+                <div class="menu__item-left">
+                    <h3>Al tonno</h3>
+                    <p>(Tuna, capers, garlic, onions, parsley)</p>
                 </div>
                 <div class="menu__item-right">
                     <h3>15$</h3>
@@ -95,99 +165,29 @@
         </div>
         <div class="menu__item">
             <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
+                <img src="images/lasagne.jpg" alt="">
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
+                    <h3>Lasagne</h3>
+                    <p>(Bolognese sauce, mozzarella, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>15$</h3>
+                    <h3>10$</h3>
                 </div>
             </div>
         </div>
         <div class="menu__item">
             <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
+                <img src="images/tortellini.jpg" alt="">
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
+                    <h3>Tortellini</h3>
+                    <p>(Pork, prosciutto, mortadella, parmesan, egg, nutmeg)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>15$</h3>
-                </div>
-            </div>
-        </div>
-        <div class="menu__item">
-            <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
-            </div>
-            <div class="menu__item-text">
-                <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
-                </div>
-                <div class="menu__item-right">
-                    <h3>15$</h3>
-                </div>
-            </div>
-        </div>
-        <div class="menu__item">
-            <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
-            </div>
-            <div class="menu__item-text">
-                <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
-                </div>
-                <div class="menu__item-right">
-                    <h3>15$</h3>
-                </div>
-            </div>
-        </div>
-        <div class="menu__item">
-            <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
-            </div>
-            <div class="menu__item-text">
-                <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
-                </div>
-                <div class="menu__item-right">
-                    <h3>15$</h3>
-                </div>
-            </div>
-        </div>
-        <div class="menu__item">
-            <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
-            </div>
-            <div class="menu__item-text">
-                <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
-                </div>
-                <div class="menu__item-right">
-                    <h3>15$</h3>
-                </div>
-            </div>
-        </div>
-        <div class="menu__item">
-            <div class="menu__item-image">
-                <img src="images/bolognese.jpg" alt="">
-            </div>
-            <div class="menu__item-text">
-                <div class="menu__item-left">
-                    <h3>Bolognese</h3>
-                    <p>(Ground meat, carotts, onions, celery, passata)</p>
-                </div>
-                <div class="menu__item-right">
-                    <h3>15$</h3>
+                    <h3>20$</h3>
                 </div>
             </div>
         </div>
@@ -199,9 +199,6 @@
 
 <section class="about">
     <div class="about__container">
-        <div class="about__image">
-            <img src="images/about-image.png" alt="">
-        </div>
         <div class="about__text">
             <div class="about__heading heading">
                 <h2>About</h2>
@@ -209,6 +206,10 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque autem voluptas, harum adipisci suscipit natus atque, distinctio accusamus explicabo enim officia asperiores magnam, facere iste saepe maxime beatae ratione molestias?</p>
             </div>
         </div>
+        <div class="about__image">
+            <img src="images/about-image.png" alt="">
+        </div>
+        
     </div>
 </section>
 
@@ -236,7 +237,7 @@
                 <li><a href="">+381 (0)69 1990 16 5</a></li>
             </ul>
             <ul>
-                <li><h3>Working-Hours</h3></li>
+                <li><h3>Opening Hours</h3></li>
                 <li><a href="">10:00 - 23:30</a></li>
             </ul>
         </div>
