--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li class="navbar__nav-link"><a href="#">Contact</a></li>
             </ul>
             </nav>
+            
         </div>
     </header>
 
@@ -34,7 +35,8 @@
 <section id="home" class="showcase">
     <div class="showcase__container">
         <div class="showcase__text">
-            <h1>TASTY & DELICIOUS</h1>
+            <h2 class="above-heading">Welcome to</h2>
+            <h1>PastaBar</h1>
             <h2>We serve pasta dishes prepared by traditional recipes </h2>
             <a class="btn" href="#">View Menu</a>
         </div>
@@ -46,9 +48,9 @@
 
 <section class="menu" id="menu">
     <div class="menu__container">
-        <div class="menu__heading heading">
-            <h2>Menu</h2>
-            <h1>Discover Our Menu</h1>
+        <div class="menu__heading">
+            <h2 class="above-heading">Menu</h2>
+            <h1 class="heading">Discover Our Menu</h1>
         </div>
         <div class="menu__grid">
         <div class="menu__item">
