--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
                 <li class="navbar__nav-link"><a href="#">Contact</a></li>
             </ul>
             </nav>
-            
+            <div class="navbar__toggle">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </div>
     </header>
 
