--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 <section class="about">
     <div class="about__container">
         <div class="about__text">
-            <div class="about__heading heading">
-                <h2>About</h2>
-                <h1>We Are PastaBar</h1>
+            <div class="about__heading">
+                <h2 class="above-heading">About</h2>
+                <h1 class="heading">We Are PastaBar</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque autem voluptas, harum adipisci suscipit natus atque, distinctio accusamus explicabo enim officia asperiores magnam, facere iste saepe maxime beatae ratione molestias?</p>
             </div>
         </div>
@@ -221,14 +221,9 @@
 
 <section class="contact">
     <div class="contact__container">
-        <div class="contact__heading">
-                <div class="heading">
-                <h2>Contact</h2>
-                <h1>Make A Reservation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quae asperiores consequatur voluptas, odio ipsum sit accusantium aliquam sapiente ducimus?</p>
-                    <a href="" class="btn-ghost">Book A Table&nbsp;<i class="fas fa-phone-alt"></i></a>
-            </div>
-        </div>
+                <h2 class="above-heading">Contact</h2>
+                <h1 class="heading">Get In Touch</h1>        
+        <div class="contact__flex-container">
         <div class="contact__contact-info">
             <ul>
                 <li><h3>Adress</h3></li>
@@ -246,15 +241,29 @@
                 <li><h3>Opening Hours</h3></li>
                 <li><a href="">10:00 - 23:30</a></li>
             </ul>
+            <ul>
+                <li><h3>Social Networks</h3></li>
+                <li><a href=""><i class="fab fa-facebook-f"></i></a><a href=""><i class="fab fa-instagram"></i></a><a href=""><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </div>
+
+        <div class="contact__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1451.5845853836342!2d21.89592705825752!3d43.310717946478995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4755b0a5e0b672f7%3A0x9d0f7f49a4d8d5a5!2zQm_FvmlkYXLEjWV2YSAyMiwgTmnFoQ!5e0!3m2!1sen!2srs!4v1618847929284!5m2!1sen!2srs" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
+</div>
 </section>
 
-<footer>
+<footer class="footer">
     <div class="footer__top">
         <div class="footer__container">
-            
+            <a href="" class="logo">
+                <img src="images/logo2.png" alt="">
+            </a>
         </div>
+    </div>
+    <div class="footer__bottom">
+        © 2021 Pasta Bar. All rights reserved.
     </div>
 </footer>
 
