--- a/index.html
+++ b/index.html
@@ -239,11 +239,13 @@
             </ul>
             <ul>
                 <li><h3>Opening Hours</h3></li>
-                <li><a href="">10:00 - 23:30</a></li>
+                <li><a href="">10:00 - 01:00</a></li>
             </ul>
             <ul>
                 <li><h3>Social Networks</h3></li>
-                <li><a href=""><i class="fab fa-facebook-f"></i></a><a href=""><i class="fab fa-instagram"></i></a><a href=""><i class="fab fa-youtube"></i></a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Linkedin</a></li>
             </ul>
         </div>
 
