--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             <a href="" class="logo">
                 <img src="images/logo2.png" alt="">
             </a>
+            
         </div>
     </div>
     <div class="footer__bottom">
@@ -269,5 +270,7 @@
     </div>
 </footer>
 
+
+<script src="script.js"></script>
 </body>
 </html>
