--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </a>
         <nav>
             <ul class="navbar__nav-links">
-                <li class="navbar__nav-link"><a href="#">Home</a></li>
-                <li class="navbar__nav-link"><a href="#">Menu</a></li>
-                <li class="navbar__nav-link"><a href="#">About</a></li>
-                <li class="navbar__nav-link"><a href="#">Contact</a></li>
+                <li><a href="#" class="navbar__nav-link">Home</a></li>
+                <li><a href="#" class="navbar__nav-link">Menu</a></li>
+                <li><a href="#" class="navbar__nav-link">About</a></li>
+                <li><a href="#" class="navbar__nav-link">Contact</a></li>
             </ul>
             </nav>
             <div class="navbar__toggle">
