--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
 </div>
 </section>
 
+<div class="mobile-map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1451.5845853836342!2d21.89592705825752!3d43.310717946478995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4755b0a5e0b672f7%3A0x9d0f7f49a4d8d5a5!2zQm_FvmlkYXLEjWV2YSAyMiwgTmnFoQ!5e0!3m2!1sen!2srs!4v1618847929284!5m2!1sen!2srs" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+
 <footer class="footer">
     <div class="footer__top">
         <div class="footer__container">
