--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </a>
         <nav>
             <ul class="navbar__nav-links">
-                <li><a href="#" class="navbar__nav-link">Home</a></li>
-                <li><a href="#" class="navbar__nav-link">Menu</a></li>
-                <li><a href="#" class="navbar__nav-link">About</a></li>
-                <li><a href="#" class="navbar__nav-link">Contact</a></li>
+                <li><a href="#home" class="navbar__nav-link">Home</a></li>
+                <li><a href="#menu" class="navbar__nav-link">Menu</a></li>
+                <li><a href="#about" class="navbar__nav-link">About</a></li>
+                <li><a href="#contact" class="navbar__nav-link">Contact</a></li>
             </ul>
             </nav>
             <div class="navbar__toggle">
@@ -32,6 +32,19 @@
             </div>
         </div>
     </header>
+
+
+    <!-- hamburger menu -->
+
+    <div class="hamburger-menu">
+            <ul class="hamburger-menu__navlinks">
+                <li><a href="#home" class="hamburger-menu__navlink">Home</a></li>
+                <li><a href="#menu" class="hamburger-menu__navlink">Menu</a></li>
+                <li><a href="#about" class="hamburger-menu__navlink">About</a></li>
+                <li><a href="#contact" class="hamburger-menu__navlink">Contact</a></li>
+            </ul>
+    </div>
+
 <!-- showcase -->
 
 <section id="home" class="showcase">
@@ -220,7 +233,7 @@
 </section>
 
 <!-- about -->
-<section class="about">
+<section class="about" id="about">
     <div class="about__container">
         <div class="about__text">
             <div class="about__heading">
@@ -246,7 +259,7 @@
 </section>
 
 
-<section class="contact">
+<section class="contact" id="contact">
     <div class="contact__container">
                 <h2 class="above-heading">Contact</h2>
                 <h1 class="heading">Get In Touch</h1>        
