--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="above-heading">Welcome to</h2>
             <h1>PastaBar</h1>
             <h2>We serve pasta dishes prepared by traditional recipes </h2>
-            <a class="btn" href="#">View Menu</a>
+            <a class="btn" href="#menu">View Menu</a>
         </div>
         <div class="showcase__image"></div>
     </div>
