--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="about__text">
             <div class="about__heading">
                 <h2 class="above-heading">About</h2>
-                <h1 class="heading">We Are PastaBar</h1>
+                <h1 class="heading">Who We Are</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque autem voluptas, harum adipisci suscipit natus atque, distinctio accusamus explicabo enim officia asperiores magnam, facere iste saepe maxime beatae ratione molestias?</p>
             </div>
         </div>
