--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
 </section>
 
-<!-- services -->
+<!-- reservation -->
 <section class="reservation">
     <div class="reservation__container">
         <h1>Make A Reservation</h1>
