--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="reservation__container">
         <h1>Make A Reservation</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aspernatur dolores quaerat, vel quisquam harum inventore veniam libero a temporibus aperiam nisi enim unde illo?</p>
-        <a href="" class="btn-ghost">Book A Table</a>
+        <a href="" class="btn-ghost">Book A Table&nbsp;<i class="fas fa-phone-alt"></i></a>
     </div>
 </section>
 
