--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 <body>
     
+<!-- loader -->
+<div class="loader">
+    <div class="spinner">
+      <div></div>
+      <div></div>
+    </div>
+    <br>
+      <h3>Please wait...</h3>
+  </div>
+
     <!-- navbar -->
     <header class="navbar">
         <div class="navbar__container">
@@ -303,7 +313,7 @@
 <footer class="footer">
     <div class="footer__top">
         <div class="footer__container">
-            <a href="" class="logo">
+            <a href="#" class="logo">
                 <img src="images/logo2.png" alt="">
             </a>
             
