--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PastaBar</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
@@ -35,25 +35,19 @@
                 <li><a href="#contact" class="navbar__nav-link">Contact</a></li>
             </ul>
             </nav>
-            <div class="navbar__toggle">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-            </div>
+           
         </div>
     </header>
 
-
-    <!-- hamburger menu -->
-
-    <div class="hamburger-menu">
-            <ul class="hamburger-menu__navlinks">
-                <li><a href="#home" class="hamburger-menu__navlink">Home</a></li>
-                <li><a href="#menu" class="hamburger-menu__navlink">Menu</a></li>
-                <li><a href="#about" class="hamburger-menu__navlink">About</a></li>
-                <li><a href="#contact" class="hamburger-menu__navlink">Contact</a></li>
-            </ul>
-    </div>
+<!-- bottom navigation -->
+<nav class="bottom-navigation">
+    <ul>
+      <li><a href="#home"><i class="fas fa-home"></i><span>Home</span></a></li>
+      <li><a href="#menu"><i class="fas fa-utensils"></i><span>Menu</span></a></li>
+      <li><a href="#about"><i class="fas fa-users"></i><span>About</span></a></li>
+      <li><a href="#contact"><i class="fas fa-phone-alt"></i><span>Contact</span></a></li>
+    </ul>
+  </nav>
 
 <!-- showcase -->
 
@@ -62,8 +56,8 @@
         <div class="showcase__text">
             <h2 class="above-heading">Welcome to</h2>
             <h1>PastaBar</h1>
-            <h2>We serve pasta dishes prepared by traditional recipes </h2>
-            <a class="btn" href="#menu">View Menu</a>
+            <p>The finest place in town where pasta dishes prepared by traditional recipes.</p>
+            <a class="btn" href="#menu">Book A Table</a>
         </div>
         <div class="showcase__image"></div>
     </div>
@@ -83,11 +77,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Bolognese</h3>
+                    <h2>Bolognese</h2>
                     <p>(Ground meat, carotts, onions, celery, passata)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>15$</h3>
+                    <h2>15$</h2>
                 </div>
             </div>
         </div>
@@ -97,11 +91,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Amatriciana</h3>
+                    <h2>Amatriciana</h2>
                     <p>(Pancetta, tomato sauce, garlic, onions)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>20$</h3>
+                    <h2>20$</h2>
                 </div>
             </div>
         </div>
@@ -111,11 +105,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Pasta Al Pomodoro</h3>
+                    <h2>Pasta Al Pomodoro</h2>
                     <p>(Tomato sauce, garlic, basil)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>10$</h3>
+                    <h2>10$</h2>
                 </div>
             </div>
         </div>
@@ -125,11 +119,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Arrabbiata</h3>
+                    <h2>Arrabbiata</h2>
                     <p>(Tomato sauce, garlic, chili, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>15$</h3>
+                    <h2>15$</h2>
                 </div>
             </div>
         </div>
@@ -139,11 +133,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Frutti di mare</h3>
+                    <h2>Frutti di mare</h2>
                     <p>(Tomato sauce, seafood mix, garlic, onions)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>35$</h3>
+                    <h2>35$</h2>
                 </div>
             </div>
         </div>
@@ -153,11 +147,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Pesto</h3>
+                    <h2>Pesto</h2>
                     <p>(Basil, pine nuts, parmesan, garlic, lemon)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>30$</h3>
+                    <h2>30$</h2>
                 </div>
             </div>
         </div>
@@ -167,11 +161,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Carbonara</h3>
+                    <h2>Carbonara</h2>
                     <p>(Pancetta, eggs, Pecorino, Black pepper)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>20$</h3>
+                    <h2>20$</h2>
                 </div>
             </div>
         </div>
@@ -181,11 +175,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Al tonno</h3>
+                    <h2>Al tonno</h2>
                     <p>(Tuna, capers, garlic, onions, parsley)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>15$</h3>
+                    <h2>15$</h2>
                 </div>
             </div>
         </div>
@@ -195,11 +189,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Lasagne</h3>
+                    <h2>Lasagne</h2>
                     <p>(Bolognese sauce, mozzarella, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>10$</h3>
+                    <h2>10$</h2>
                 </div>
             </div>
         </div>
@@ -209,11 +203,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h3>Tortellini</h3>
+                    <h2>Tortellini</h2>
                     <p>(Pork, prosciutto, mortadella, parmesan, egg, nutmeg)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h3>20$</h3>
+                    <h2>20$</h2>
                 </div>
             </div>
         </div>
