--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PastaBar</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
@@ -56,7 +56,7 @@
         <div class="showcase__text">
             <h2 class="above-heading">Welcome to</h2>
             <h1>PastaBar</h1>
-            <p>The finest place in town where pasta dishes prepared by traditional recipes.</p>
+            <h3>The finest place in town where pasta dishes prepared by traditional recipes.</h3>
             <a class="btn" href="#menu">Book A Table</a>
         </div>
         <div class="showcase__image"></div>
@@ -77,11 +77,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Bolognese</h2>
+                    <h3>Bolognese</h3>
                     <p>(Ground meat, carotts, onions, celery, passata)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>15$</h2>
+                    <h3>15$</h3>
                 </div>
             </div>
         </div>
@@ -91,11 +91,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Amatriciana</h2>
+                    <h3>Amatriciana</h3>
                     <p>(Pancetta, tomato sauce, garlic, onions)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>20$</h2>
+                    <h3>20$</h3>
                 </div>
             </div>
         </div>
@@ -105,11 +105,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Pasta Al Pomodoro</h2>
+                    <h3>Pasta Al Pomodoro</h3>
                     <p>(Tomato sauce, garlic, basil)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>10$</h2>
+                    <h3>10$</h3>
                 </div>
             </div>
         </div>
@@ -119,11 +119,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Arrabbiata</h2>
+                    <h3>Arrabbiata</h3>
                     <p>(Tomato sauce, garlic, chili, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>15$</h2>
+                    <h3>15$</h3>
                 </div>
             </div>
         </div>
@@ -133,11 +133,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Frutti di mare</h2>
+                    <h3>Frutti di mare</h3>
                     <p>(Tomato sauce, seafood mix, garlic, onions)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>35$</h2>
+                    <h3>35$</h3>
                 </div>
             </div>
         </div>
@@ -147,11 +147,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Pesto</h2>
+                    <h3>Pesto</h3>
                     <p>(Basil, pine nuts, parmesan, garlic, lemon)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>30$</h2>
+                    <h3>30$</h3>
                 </div>
             </div>
         </div>
@@ -161,11 +161,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Carbonara</h2>
+                    <h3>Carbonara</h3>
                     <p>(Pancetta, eggs, Pecorino, Black pepper)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>20$</h2>
+                    <h3>20$</h3>
                 </div>
             </div>
         </div>
@@ -175,11 +175,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Al tonno</h2>
+                    <h3>Al tonno</h3>
                     <p>(Tuna, capers, garlic, onions, parsley)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>15$</h2>
+                    <h3>15$</h3>
                 </div>
             </div>
         </div>
@@ -189,11 +189,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Lasagne</h2>
+                    <h3>Lasagne</h3>
                     <p>(Bolognese sauce, mozzarella, parmesan)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>10$</h2>
+                    <h3>10$</h3>
                 </div>
             </div>
         </div>
@@ -203,11 +203,11 @@
             </div>
             <div class="menu__item-text">
                 <div class="menu__item-left">
-                    <h2>Tortellini</h2>
+                    <h3>Tortellini</h3>
                     <p>(Pork, prosciutto, mortadella, parmesan, egg, nutmeg)</p>
                 </div>
                 <div class="menu__item-right">
-                    <h2>20$</h2>
+                    <h3>20$</h3>
                 </div>
             </div>
         </div>
