--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div></div>
     </div>
     <br>
-      <h3>Please wait...</h3>
+      <p>Please wait...</p>
   </div>
 
     <!-- navbar -->
@@ -54,7 +54,7 @@
 <section id="home" class="showcase">
     <div class="showcase__container">
         <div class="showcase__text">
-            <h1>Enjoy Tasty & Delicious Pasta</h1>
+            <h1>Enjoy Tasty &<br>Delicious Pasta</h1>
             <p>The finest place in town where pasta dishes prepared by traditional recipes.</p>
             <a class="btn" href="#menu">View Menu</a>
         </div>
@@ -305,7 +305,12 @@
             <a href="#" class="logo">
                 <img src="images/logo2.svg" alt="">
             </a>
-            
+            <ul class="footer__quick-links">
+                <li class="footer__quick-link"><a href="#home">Home</a></li>
+                <li class="footer__quick-link"><a href="#menu">Menu</a></li>
+                <li class="footer__quick-link"><a href="#about">About</a></li>
+                <li class="footer__quick-link"><a href="#contact">Contact</a></li>
+            </ul>
         </div>
     </div>
     <div class="footer__bottom">
